--- a/veterinarias.html
+++ b/veterinarias.html
@@ -7,10 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
     <link href="css/styles.css" rel="stylesheet">
-    
 
     <title>Hello, world!</title>
   </head>
@@ -65,8 +62,8 @@
                   <td>@mdo</td>
                   <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-info"><i class="far fa-edit"></i></button>
-                        <button type="button" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                        <button type="button" class="btn btn-info">editar</button>
+                        <button type="button" class="btn btn-secondary">eliminar</button>
                     </div>
                   </td>
                 </tr>
@@ -77,8 +74,8 @@
                   <td>@fat</td>
                   <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-info"><i class="far fa-edit"></i></button>
-                        <button type="button" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                        <button type="button" class="btn btn-info">editar</button>
+                        <button type="button" class="btn btn-secondary">eliminar</button>
                     </div>
                   </td>
                 </tr>
@@ -89,8 +86,8 @@
                   <td>@twitter</td>
                   <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-info"><i class="far fa-edit"></i></button>
-                        <button type="button" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                        <button type="button" class="btn btn-info">editar</button>
+                        <button type="button" class="btn btn-secondary">eliminar</button>
                     </div>
                   </td>
                 </tr>
@@ -141,9 +138,7 @@
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
-    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
   </body>
 </html>
