--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="css/styles.css" rel="stylesheet">
     
 
-    <title>Hello, world!</title>
+    <title>VETERINARIA</title>
   </head>
   <body>
     <div class="container">
@@ -46,7 +46,9 @@
         </nav>
         <div class="actions-menu">
           <h1>Mascotas</h1>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Nueva</button> 
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Nueva
+          </button> 
         </div>
         <table class = "table table-stripped table-hover">
             <thead class="thead-dark">
@@ -71,6 +73,7 @@
                 </div>
                 <div class="modal-body">
                   <form id="form">
+                      <input type="hidden" id="indice">
                       <div class="form-row">
                         <div class="col">
                           <select id="tipo" class="form-control">
@@ -102,7 +105,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary" id="btn-guardar">Guardar</button>
+                  <button type="button" class="btn btn-primary" id="btn-guardar">Crear</button>
                 </div>
               </div>
             </div>
