--- a/veterinarias.html
+++ b/veterinarias.html
@@ -7,9 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
     <link href="css/styles.css" rel="stylesheet">
+    
 
-    <title>Hello, world!</title>
+    <title>VETERINARIA</title>
   </head>
   <body>
     <div class="container">
@@ -42,90 +45,65 @@
             </div>
         </nav>
         <div class="actions-menu">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Nuevo</button> 
+          <h1>Veterinari@s</h1>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Nueva
+          </button> 
         </div>
         <table class = "table table-stripped table-hover">
             <thead class="thead-dark">
                 <tr>
                   <th scope="col">#</th>
-                  <th scope="col">First</th>
-                  <th scope="col">Last</th>
-                  <th scope="col">Handle</th>
-                  <th scope="col">Actions</th>
+                  <th scope="col">Identificación</th>
+                  <th scope="col">País</th>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Apellido</th>
+                  <th scope="col"></th>
                 </tr>
               </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td>
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-info">editar</button>
-                        <button type="button" class="btn btn-secondary">eliminar</button>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                  <td>
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-info">editar</button>
-                        <button type="button" class="btn btn-secondary">eliminar</button>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Larry the Bird</td>
-                  <td>hola</td>
-                  <td>@twitter</td>
-                  <td>
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-info">editar</button>
-                        <button type="button" class="btn btn-secondary">eliminar</button>
-                    </div>
-                  </td>
-                </tr>
+              <tbody id="lista-veterinarias">
+                
               </tbody>
         </table>
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Nueva Mascota</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Nueva Veterinaria</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <form>
-                      <div class="form-group">
-                        <select class="form-control" id="exampleFormControlSelect1">
-                          <option>Tipo animal</option>
-                          <option>1</option>
-                          <option>2</option>
-                          <option>3</option>
-                          <option>4</option>
-                          <option>5</option>
-                        </select>
-                      </div>
+                  <form id="form">
+                      <input type="hidden" id="indice">
                       <div class="form-row">
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="First name">
+                          <select id="pais" class="form-control" id="exampleFormControlSelect1">
+                            <option>País</option>
+                            <option>Colombia</option>
+                            <option>Perú</option>
+                            <option>Ecuador</option>
+                            <option>Bolivia</option>
+                            <option>Venezuela</option>
+                            <option>Chile</option>
+                          </select>
                         </div>
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Last name">
+                          <input type="text" id="identificacion" name="identificacion" class="form-control" placeholder="Identificación">
+                      </div>
+                      <div class="col">
+                        <div class="col">
+                            <input type="text" id="nombre" name="nombre" class="form-control" placeholder="Nombre">
+                        </div>
+                        <div class="col">
+                          <input type="text" id="apellido" name="apellido" class="form-control" placeholder="Apellido">
                         </div>
                       </div>
                   </form>
 
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                  <button type="button" class="btn btn-primary" id="btn-guardar">Crear</button>
                 </div>
               </div>
             </div>
@@ -138,7 +116,10 @@
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script
     -->
+    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.13.0/js/v4-shims.js"></script>
+    <script src="js/veterinarias.js"></script>
   </body>
 </html>
