--- a/frontend/consultas.html
+++ b/frontend/consultas.html
@@ -22,16 +22,16 @@
               <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Mascotas</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Mascotas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/veterinarias.html">Veterinari@s</a>
+                    <a class="nav-link" href="veterinarias.html">Veterinari@s</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/consultas.html">Consultas</a>
+                    <a class="nav-link" href="consultas.html">Consultas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/duenos.html">Dueños</a>
+                    <a class="nav-link" href="duenos.html">Dueños</a>
                   </li>
                 </ul>
                 <form class="d-flex">
