Crear, editar y eliminar mascotas desde la API

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -96,6 +96,7 @@
                             <option>Julian</option>
                             <option>Jhon</option>
                             <option>Felix</option>
+                            <option>Camilo</option>
                           </select>
                         </div>
                       </div>
